--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
                     </div>
                     <div class="footer-col col-md-4">
                       <p>
-                        <strong><a href="http://fortawesome.github.io/">Font Awesome</a></strong> , the iconic font and CSS framework created by <a href="http://twitter.com/davegandy">Dave Gandy</a>. Licensed under <a href="http://scripts.sil.org/OFL">SIL OFL 1.1</a>
+                        <strong><a href="http://fortawesome.github.io/Font-Awesome/">Font Awesome</a></strong> , the iconic font and CSS framework created by <a href="http://twitter.com/davegandy">Dave Gandy</a>. Licensed under <a href="http://scripts.sil.org/OFL">SIL OFL 1.1</a>
                       </p>
                     </div>
                     <div class="footer-col col-md-4">
@@ -30,7 +30,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; {{ site.title | site.data.cv.name }} {{ site.time | date: '%Y' }} &middot; <a href="LICENSE">MIT License</a> &middot; <a href="http://github.com/{{ site.data.cv.social.github}}/{{site.data.cv.homepage}}">Source Code</a>
+                        Copyright &copy; {{ site.title | site.data.cv.name }} {{ site.time | date: '%Y' }} &middot; <a href="LICENSE">MIT License</a> &middot; <a href="http://github.com/{{ site.data.cv.social.github}}/{{site.data.cv.social.github}}.github.io">Source Code</a>
                     </div>
                 </div>
             </div>
