--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,7 +36,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <!--<img class="img-responsive" src="img/profile.png" alt="">-->
-                    <img class="img-responsive img-circle img-thumbnail" src="img/jorge.jpg" alt="{{ site.title }}" width="200" height="200">
+                    <img class="img-responsive img-circle img-thumbnail" src="img/jorge.jpg" alt="{{ site.data.cv.name | truncatewords:2,'' }} photo" width="200" height="200">
                     <div class="intro-text">
                         <span class="name">Web Engineer</span>
                         <hr class="star">
