--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,6 +34,9 @@
     <header>
         <div class="container">
             <div class="row">
+              <div class="col-md-offset-3 col-lg-6">
+                <div class="alert alert-warning" role="alert"><h2><i class="glyphicon glyphicon-alert"></i>&nbsp;UNDER CONSTRUCTION</h2></div>
+              </div>
                 <div class="col-lg-12">
                     <!--<img class="img-responsive" src="img/profile.png" alt="">-->
                     <img class="img-responsive img-circle img-thumbnail" src="img/jorge.jpg" alt="{{ site.data.cv.name | truncatewords:2,'' }} photo" width="200" height="200">
