--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
                     </div>
                     <div class="footer-col col-md-4">
                       <p>
-                        Other icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> and <a href="http://www.simpleicon.com">SimpleIcon</a> from <a href="http://www.flaticon.com">Flaticon</a>. Licensed under <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a>.
+                        Other icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> and <a href="http://www.simpleicon.com">SimpleIcon</a>, from <a href="http://www.flaticon.com">Flaticon</a>. Licensed under <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a>.
                       </p>
                     </div>
                 </div>
