--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,7 +41,7 @@
                     <!--<img class="img-responsive" src="img/profile.png" alt="">-->
                     <img class="img-responsive img-circle img-thumbnail" src="img/jorge.jpg" alt="{{ site.data.cv.name | truncatewords:2,'' }} photo" width="200" height="200">
                     <div class="intro-text">
-                        <span class="name">Web Engineer</span>
+                        <span class="name">Web Software Architect</span>
                         <hr class="star">
                         <span class="skills">Dublin, Ireland</span>
                     </div>
