--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,16 +1,17 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{{ site.data.cv.name | truncatewords:2,'' }} | Web Engineer</title>
+    <title>Jorge Barata - Web Engineer</title>
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="{{ site.data.cv.intro | markdownify | strip_html }}">
-    <link rel="canonical" href="//{{ site.data.cv.homepage }}">
+    <meta name="description" content="Web Software Architect in Dublin">
+    <link rel="canonical" href="http://jorgebg.com">
+    <link rel=icon href=/favicon.ico>
 
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/style.css">
 
     <!-- Custom Fonts -->
-    <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/font-awesome/css/font-awesome.min.css">
     <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="//fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
