--- a/_includes/sections/contact.html
+++ b/_includes/sections/contact.html
@@ -2,16 +2,16 @@
   <div class="col-md-12">
     <ul class="list-inline">
       <li>
-        <a href="http://www.linkedin.com/in/{{ site.data.cv.social.linkedin }}/en" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+        <a href="http://{{ site.author.linkedin }}/en" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
       </li>
       <li>
-        <a href="http://github.com/{{ site.data.cv.social.github }}" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
+        <a href="http://{{ site.author.github }}" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
       </li>
       <li>
-        <a href="http://stackoverflow.com/users/{{ site.data.cv.social.stackoverflow }}" class="btn-social btn-outline"><i class="fa fa-fw fa-stack-overflow"></i></a>
+        <a href="http://{{ site.author.stackoverflow }}" class="btn-social btn-outline"><i class="fa fa-fw fa-stack-overflow"></i></a>
       </li>
       <li>
-        <a href="mailto:{{ site.data.cv.mail }}" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope"></i></a>
+        <a href="mailto:{{ site.author.mail }}" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope"></i></a>
       </li>
     </ul>
   </div>
