--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">{{ site.data.cv.name | truncatewords:2,''}}</a>
+                <a class="navbar-brand" href="#page-top">Jorge Barata</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -19,8 +19,10 @@
                         <a href="#page-top"></a>
                     </li>
                     {% for section in site.sections %}
+                    {% assign id = section[0] %}
+                    {% assign label = section[1] %}
                     <li class="page-scroll">
-                      <a href="#{{section}}">{{ section }}</a>
+                      <a href="#{{id}}">{{ label }}</a>
                     </li>
                     {% endfor %}
                 </ul>
@@ -34,11 +36,7 @@
     <header>
         <div class="container">
             <div class="row">
-              <div class="col-md-offset-3 col-lg-6">
-                <div class="alert alert-warning" role="alert"><h2><i class="glyphicon glyphicon-alert"></i>&nbsp;UNDER CONSTRUCTION</h2></div>
-              </div>
                 <div class="col-lg-12">
-                    <!--<img class="img-responsive" src="img/profile.png" alt="">-->
                     <img class="img-responsive img-circle img-thumbnail" src="img/jorge.jpg" alt="{{ site.data.cv.name | truncatewords:2,'' }} photo" width="200" height="200">
                     <div class="intro-text">
                         <span class="name">Web Software Architect</span>
