--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -203,6 +203,10 @@ section {
   padding: 100px 0;
 }
 
+section p {
+  margin: 20px;
+}
+
 section h2 {
   margin: 0;
   font-size: 3em;
@@ -265,25 +269,25 @@ footer .footer-below {
 
 .btn-social {
   display: inline-block;
-  width: 50px;
-  height: 50px;
-  border: 2px solid #fff;
+  width: 80px;
+  height: 80px;
+  border: 4px solid #fff;
   border-radius: 100%;
   text-align: center;
-  font-size: 20px;
-  line-height: 45px;
+  font-size: 50px;
+  line-height: 70px;
 }
 
 section:nth-child(odd) .btn-social {
-  border-color: #{{ site.color.primary }};
+  background-color: #fff;
   color: #{{ site.color.primary }};
-  text-shadow: #{{ site.color.secondary }} 1px 1px 1px;
-  box-shadow: #{{ site.color.secondary }} 1px 1px 1px;
+  border: 4px solid #{{ site.color.tertiary }};
 }
 
 section:nth-child(odd) .btn-social:hover {
-  border-color: #{{ site.color.tertiary }};
-  color: #{{ site.color.tertiary }};
+  background-color: #fff;
+  color: #{{ site.color.secondary-dark }};
+  border: 4px solid #{{ site.color.secondary-dark }};
 }
 
 .btn:focus,
