--- a/_includes/sections/resume.html
+++ b/_includes/sections/resume.html
@@ -26,7 +26,7 @@
     &nbsp;
   </div>
   <div class="col-md-12 text-center">
-    <a class="btn btn-danger btn-lg" href="/cv/">
+    <a class="btn btn-danger btn-lg" href="//jorgebg.com/cv/">
       <strong><i class="fa fa-file"></i> &nbsp; Curriculum Vitae</strong>
     </a>
   </div>
