--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,7 +30,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; {{ site.title | site.data.cv.name }} {{ site.time | date: '%Y' }} &middot; <a href="LICENSE">MIT License</a> &middot; <a href="http://{{ site.author.github}}/jorge.github.io">Source Code</a>
+                        Copyright &copy; {{ site.title | site.data.cv.name }} {{ site.time | date: '%Y' }} &middot; <a href="LICENSE">MIT License</a> &middot; <a href="http://{{ site.author.github}}/jorgebg.github.io">Source Code</a>
                     </div>
                 </div>
             </div>
