--- a/_includes/sections/contact.html
+++ b/_includes/sections/contact.html
@@ -2,7 +2,7 @@
   <div class="col-md-12">
     <ul class="list-inline">
       <li>
-        <a href="http://{{ site.author.linkedin }}" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/baratajorge" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
       </li>
       <li>
         <a href="http://{{ site.author.github }}" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
