--- a/_includes/sections/open-source.html
+++ b/_includes/sections/open-source.html
@@ -5,7 +5,7 @@
     </div>
     <div class="col-md-6 text-justify">
       {% capture text %}
-I really enjoy **free software** and do my best to contribute to projects I is interested in, such as *Yii*, *Symfony* and *Django* among others.
+I really enjoy **free software** and I do my best to contribute to projects I am interested in, such as *Yii*, *Symfony* and *Django* among others.
 
 I also try to *open-source* everything I do on **[GitHub](//{{ site.author.github }})**:
       {% endcapture %}
