--- a/_includes/sections/open-source.html
+++ b/_includes/sections/open-source.html
@@ -13,7 +13,7 @@ I also try to *open-source* everything I do on **[GitHub](//{{ site.author.githu
     </div>
 
   <div class="col-md-6 col-md-offset-3 text-center">
-    <div class="github-card" data-github="jorgebg" data-width="400" data-height="" data-theme="default"></div>
+    <div class="github-card" data-github="jorgebg" data-width="" data-height="" data-theme="default"></div>
     <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
   </div>
 
