--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Jorge Barata - Web Engineer</title>
+    <title>Jorge Barata - Computer Scientist</title>
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Web Software Architect in Dublin">
+    <meta name="description" content="Senior Software Engineer">
     <link rel="canonical" href="http://jorgebg.com">
     <link rel=icon href=/favicon.ico>
 
