--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,9 +39,9 @@
                 <div class="col-lg-12">
                     <img class="img-responsive img-circle img-thumbnail" src="img/jorge.jpg" alt="{{ site.data.cv.name | truncatewords:2,'' }} photo" width="200" height="200">
                     <div class="intro-text">
-                        <span class="name">Web Software Architect</span>
+                        <span class="name">Full Stack Software Engineer</span>
                         <hr class="star">
-                        <span class="skills">Dublin, Ireland</span>
+                        <span class="skills">Madrid, Spain</span>
                     </div>
                 </div>
             </div>
