--- a/_includes/sections/resume.html
+++ b/_includes/sections/resume.html
@@ -2,24 +2,24 @@
   <div class="col-md-6 col-md-offset-3">
     <p><i class="fa fa-heart"></i> &nbsp;
       <strong>Software Engineering</strong> and
-      <strong>Web Applications</strong>
+      <strong>Data Science</strong>
     </p>
   </div>
   <div class="col-md-6 col-md-offset-3">
     <p><i class="fa fa-cogs"></i> &nbsp;
-      <strong>Python</strong> <strong>PHP</strong> JS Git Linux SQL NoSQL Virtualization
+      <strong>Django</strong> <strong>React</strong> ElasticSearch Scipy Spark
     </p>
   </div>
   <div class="col-md-6 col-md-offset-3">
     <p><i class="fa fa-university"></i> &nbsp;
       <strong>BSc.</strong> in
       <strong>Computer Science</strong> and
-      <strong>Engineering</strong>
+      <strong>Engineering</strong>, <strong>MSc.</strong> in <strong>Distributed Systems</strong>
     </p>
   </div>
   <div class="col-md-6 col-md-offset-3">
-    <p><i class="fa fa-suitcase"></i> &nbsp; 5+ years of
-      <strong>experience</strong>
+    <p><i class="fa fa-suitcase"></i> &nbsp;
+      Developing applications since 2009
     </p>
   </div>
   <div class="col-md-12">
