fixup! Website update

--- a/_includes/sections/foss.html
+++ b/_includes/sections/foss.html
@@ -19,7 +19,7 @@ I also try to free everything I do on **[GitHub](//{{ site.author.github }})**:
 
       <div class="col-md-6 col-md-offset-3 text-justify">
         {% capture text %}
-<i class="fa fa-graduation-cap"></i>&nbsp; **[Dublin Django User Group](//www.meetup.com/django-dublin/)** organizer:
+<i class="fa fa-graduation-cap"></i>&nbsp; **[Dublin Django User Group](//www.meetup.com/django-dublin/)** organizer.
         {% endcapture %}
         {{ text | markdownify }}
       </div>
