--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
-<html>
-
-  {% include head.html %}
-
-
-    <body id="page-top" class="index">
-
-    {% include header.html %}
-
-    {% for section in site.sections %}
-    {% assign id = section[0] %}
-    {% assign label = section[1] %}
-    <section id="{{ id }}">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2>{{ label }}</h2>
-            <hr class="star">
-          </div>
-        </div>
-        {% include sections/{{ id }}.html %}
-      </div>
-    </section>
-    {% endfor %}
-
-    {% include footer.html %}
-    {% include js.html %}
-
-    </body>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="title" content="{{ page.title }}">
+  <meta name="description" content="{{ page.description }}">
+  <meta name="keywords" content="{{ page.keywords }}">
+  <meta name="author" content="{{ page.author }}">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{{ page.title }}</title>
+  <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
+  <link rel="stylesheet" href="/css/main.css">
+</head>
+<body>
+  <div class="container">
+    <header>
+      {% include logo.svg %}
+      <h1>{{ page.header }}</h1>
+      <section>
+        {% for item in page.social %}
+        <a href="{{ item[1] }}">{{ item[0] }}</a>
+        {% endfor %}
+      </section>
+    </header>
+    {{ content }}
+    <hr/>
+    <footer>
+      <a href="https://github.com/jorgebg/jorgebg.github.io">Source</a>
+    </footer>
+  </div>
+</body>
 </html>
