--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -11,6 +11,17 @@
   <title>{{ page.title }}</title>
   <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
   <link rel="stylesheet" href="/css/main.css">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-19120546-15"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-19120546-15', {
+      'storage': 'none'
+    });
+  </script>
 </head>
 <body>
   <div class="container">
