ga 'anonymizeIp': true

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -19,7 +19,8 @@
     gtag('js', new Date());
 
     gtag('config', 'UA-19120546-15', {
-      'storage': 'none'
+      'storage': 'none',
+      'anonymizeIp': true
     });
   </script>
 </head>
