Separate social items

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -31,7 +31,7 @@
       <h1>{{ page.header }}</h1>
       <section>
         {% for item in page.social %}
-        <a href="{{ item[1] }}">{{ item[0] }}</a>
+        <a href="{{ item[1] }}">{{ item[0] }}</a> | 
         {% endfor %}
       </section>
     </header>
