--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,45 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="title" content="{{ page.title }}">
-  <meta name="description" content="{{ page.description }}">
-  <meta name="keywords" content="{{ page.keywords }}">
-  <meta name="author" content="{{ page.author }}">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ page.title }}</title>
-  <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
-  <link rel="stylesheet" href="/css/main.css">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-19120546-15"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="title" content="{{ page.title }}" />
+    <meta name="description" content="{{ page.description }}" />
+    <meta name="keywords" content="{{ page.keywords }}" />
+    <meta name="author" content="{{ page.author }}" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>{{ page.title }}</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-19120546-15"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-    gtag('config', 'UA-19120546-15', {
-      'storage': 'none',
-      'anonymizeIp': true
-    });
-  </script>
-</head>
-<body>
-  <div class="container">
-    <header>
-      {% include logo.svg %}
-      <h1>{{ page.header }}</h1>
-      <section>
-        {% for item in page.social %}
-        <a href="{{ item[1] }}">{{ item[0] }}</a>{% if forloop.last == false %} | {% endif %}
-        {% endfor %}
-      </section>
-    </header>
-    {{ content }}
-    <hr/>
-    <footer>
-      <a href="https://github.com/jorgebg/jorgebg.github.io">Source</a>
-    </footer>
-  </div>
-</body>
+      gtag("config", "UA-19120546-15", {
+        storage: "none",
+        anonymizeIp: true,
+      });
+    </script>
+  </head>
+  <body>
+    <div class="container">
+      <header>
+        {% include logo.svg %}
+        <h1>{{ page.header }}</h1>
+        <nav>
+          {% for item in page.social %}
+          <a href="{{ item[1] }}">{{ item[0] }}</a>{% if forloop.last == false
+          %} | {% endif %} {% endfor %}
+        </nav>
+      </header>
+      {{ content }}
+      <hr />
+      <footer>
+        <a href="https://github.com/jorgebg/jorgebg.github.io">Source</a>
+      </footer>
+    </div>
+  </body>
 </html>
